[package]
name="react_weather"
version = "0.1.0"
authors = ["ssateesh <sateesh.sabbineni@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
futures = "0.1.20"
wasm-bindgen = { version = "0.2.29", features = ["serde-serialize"]  }
js-sys = "0.3.6"
wasm-bindgen-futures = "0.3.6"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]


